# gismo

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  reference.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: authors.doctree  contributing.doctree  history.doctree  index.doctree  installation.doctree  readme.doctree  reference.doctree
.doctrees/nbsphinx/tutorials/: landmarks_tutorial.ipynb  tutorial_toy_example.ipynb
.doctrees/presentation/: authors.doctree  contributing.doctree  history.doctree  index.doctree  installation.doctree  readme.doctree
.doctrees/reference/: index.doctree
.doctrees/tutorials/: index.doctree  landmarks_tutorial.doctree  tutorial_IO.doctree  tutorial_acm.doctree  tutorial_corpus.doctree  tutorial_dblp.doctree  tutorial_embedding.doctree  tutorial_toy_example.doctree
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  publish_on_pypi.yml
_modules/: index.html
_modules/gismo/: clustering.html  common.html  corpus.html  csr_compress.html  diteration.html  embedding.html  filesource.html  gismo.html  landmarks.html  parameters.html  post_processing.html  sentencizer.html
_modules/gismo/datasets/: acm.html  dblp.html  reuters.html
_sources/: installation.rst.txt  reference.rst.txt
_sources/presentation/: authors.md.txt  history.md.txt  index.md.txt  readme.md.txt
_sources/reference/: common.md.txt  corpus.md.txt  datasets.md.txt  embedding.md.txt  gismo.md.txt  landmarks.md.txt  post-processing.md.txt
_sources/tutorials/: index.rst.txt  landmarks_tutorial.ipynb.txt  tutorial_IO.ipynb.txt  tutorial_acm.ipynb.txt  tutorial_corpus.ipynb.txt  tutorial_dblp.ipynb.txt  tutorial_toy_example.ipynb.txt
docs/: Makefile  authors.md  conf.py  history.md  index.md  index.rst  logo.tex  make.bat  readme.md  reference.rst  requirements.txt  usage.rst
docs/presentation/: installation.md
docs/reference/: clustering.md  diteration.md  filesource.md  index.md  parameters.md  sentencizer.md
docs/tutorials/: index.md  index.rst  landmarks_tutorial.ipynb  tutorial_IO.ipynb  tutorial_acm.ipynb  tutorial_corpus.ipynb  tutorial_dblp.ipynb  tutorial_toy_example.ipynb
gismo/: __init__.py  clustering.py  common.py  corpus.py  csr_compress.py  diteration.py  embedding.py  filesource.py  gismo.py  landmarks.py  parameters.py  post_processing.py  sentencizer.py
gismo/SubPackage1/: MyClass1.py
gismo/SubPackage2/: MyClass2.py  MyClass3.py
gismo/datasets/: acm.py  dblp.py  reuters.py
lib/gismo/: common.py  diteration.py  embedding.py  landmarks.py  sentencizer.py
lib/gismo/datasets/: dblp.py  reuters.py
lib/tests/: test_corpus.py  test_embedding.py
presentation/: authors.html  contributing.html  history.html  index.html  installation.html  readme.html
reference/: clustering.html  common.html  corpus.html  datasets.html  diteration.html  embedding.html  filesource.html  gismo.html  index.html  landmarks.html  parameters.html  post-processing.html  sentencizer.html
tests/: __init__.py  test_corpus.py  test_dblp.py  test_embedding.py  test_gismo.py
tutorials/: index.html  landmarks_tutorial.html  landmarks_tutorial.ipynb  tutorial_IO.html  tutorial_acm.html  tutorial_acm.ipynb  tutorial_corpus.html  tutorial_dblp.html  tutorial_dblp.ipynb  tutorial_embedding.html  tutorial_embedding.ipynb  tutorial_toy_example.html  tutorial_toy_example.ipynb
